Bug 420229 - Unable to overwrite existing workspace
Summary: Unable to overwrite existing workspace
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Resource Management (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: macOS (DMG) macOS
: NOR normal
Target Milestone: ---
Assignee: Halla Rempt
URL:
Keywords:
: 409398 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-04-18 06:14 UTC by Yu-Hsuan Lai
Modified: 2021-04-08 13:53 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
The warning sign (52.08 KB, image/png)
2020-04-18 06:14 UTC, Yu-Hsuan Lai
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yu-Hsuan Lai 2020-04-18 06:14:52 UTC
Created attachment 127627 [details]
The warning sign

SUMMARY
It seems impossible to make changes to an existing workspace.


STEPS TO REPRODUCE
1. Save the workspace with a unique name, e.g. "Painting"
2. Resize a docker
3. Save the workspace with the same name

OBSERVED RESULT
It shows a warning "Saving will overwrite the original workspace". But after pressing the save button, nothing happens.

EXPECTED RESULT
The original workspace should be overwritten.

SOFTWARE/OS VERSIONS
macOS: 10.14.6
Krita: Nightly build (git 44e3f62)

ADDITIONAL INFORMATION
In 4.2.9, it doesn't work either, but with a different result: it saves a new workspace named "Painting2".
Comment 1 Ahab Greybeard 2020-04-23 13:35:36 UTC
I can confirm the OP observation for a recent 5.0.0 prealpha appimage.

In a recent 4.3.0 prealpha (from the 'stable' Plus branch) it creates a duplicate name (at the bottom of the list) which does have the saved new docker arrangement. So, I assume those workspace 'names' are non-significant labels in that case.

It seems the behaviour has changed over time.

Setting to Confirmed
Comment 2 Halla Rempt 2021-04-08 12:14:16 UTC
*** Bug 409398 has been marked as a duplicate of this bug. ***
Comment 3 Halla Rempt 2021-04-08 13:53:45 UTC
Git commit be5f1e703518211831f1ff31310711f262ff7115 by Halla Rempt.
Committed on 08/04/2021 at 13:47.
Pushed by rempt into branch 'master'.

Fix overwriting workspaces

M  +2    -2    libs/ui/KisApplication.cpp
M  +13   -9    libs/ui/KisMainWindow.cpp
M  +2    -1    libs/ui/KisMainWindow.h
M  +2    -2    libs/ui/widgets/kis_workspace_chooser.cpp

https://invent.kde.org/graphics/krita/commit/be5f1e703518211831f1ff31310711f262ff7115