Fix overwriting workspaces

BUG:420229