libs/ui/KisApplication.cpp
@@ -485,7 +485,7 @@ bool KisApplication::start(const KisApplicationArguments &args)
                 KoResourceServer<KisWorkspaceResource> * rserver = KisResourceServerProvider::instance()->workspaceServer();
                 KisWorkspaceResourceSP workspace = rserver->resourceByName(args.workspace());
                 if (workspace) {
-                    d->mainWindow->restoreWorkspace(workspace->resourceId());
+                    d->mainWindow->restoreWorkspace(workspace);
                 }
             }
 
@@ -977,7 +977,7 @@ void KisApplication::resetConfig()
     KisWorkspaceResourceSP workspace = rserver->resourceByName(currentWorkspace);
 
     if (workspace) {
-        d->mainWindow->restoreWorkspace(workspace->resourceId());
+        d->mainWindow->restoreWorkspace(workspace);
     }
 }
 
